client/css/style.css
* {
    box-sizing: border-box;
}

svg {
    width: 100%;
    height: auto;
}

h2 {
    text-align: center;
}

h1{
    text-align: center;
    width: 100%;
}

body {
    font-family: Sans, Arial, Helvetica, sans-serif;
    margin: 0;
}

/* Header/logo Title */
header {
    display: flex; 
    flex-flow: row;
    background: darkgray;
    color: white;
    padding: 2px;
    margin-bottom: 5px;
}

#exportContainer{
    display: flex;
    flex-flow: column;
    justify-content: space-evenly;
    width: 20%;
}

#exportAllButton{
    width: 40%;
}

#selectBoxContainer{
    flex-flow: row;
}

/* Main container */
.main {
    margin: 0 auto;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
}

/* Sidebar/left column */
.side {
    padding-right: 3%;
    padding-left: 3%;
    flex-grow: 0;
}

#checkboxContainer{
    display: flex; 
    flex-flow: column;
}

/* Map column */
.map {
    max-width: 25%;
    min-width: 20%;
    flex-grow: 1;
}

.charts{
    padding-right: 3%;
    padding-left: 3%;
    display: flex;
    flex-flow: column;
    flex-grow: 1;
}


#firstRowCharts{
    display: flex;
    flex-flow: row;
    justify-content: space-evenly;
}
#secondRowCharts{
    display: flex;
    flex-flow: row;
    justify-content: space-evenly;
}

#districtInformation{
    margin-left: 4%;
    display: flex;
    flex-flow: column;
}

#chart4{
    display: flex;
    flex-flow: row;
    width: 350px;
    margin-top: 30px;
    justify-content: space-evenly;
}

/* Footer */
footer {
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    text-align: center;
    background: #ddd;
    padding: 5px;
}

